galery layout bug fixed

--- a/default.css
+++ b/default.css
@@ -879,9 +879,9 @@ h6 {
     width: 100%;
   }
 
-  /* .video {
+  .video {
     width: 100%;
-  } */
+  }
 
   .app-video {
     width: 80vw;
